09_05_24_lemmaEntity_indexEntity